# epicpydevicelib

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
epicpydevicelib/: Syllable_counter.py  device_emitter.py  device_exception.py  epic_standard_symbols.py  epic_statistics.py  epicpy_auditory_encoder_base.py  epicpy_device_base.py  epicpy_visual_encoder_base.py  geometric_utilities.py  numeric_utilities.py  output_tee.py  output_tee_globals.py  random_utilities.py  speech_word.py  standard_symbols.py  standard_utility_symbols.py  symbol.py  symbol_utilities.py
