[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epicpydevicelib"
version = "0.1.2"
description = "epicpydevicelib holds the classes needed for writing and managing EPICpy devices (e.g., see https://github.com/travisseymour/EPICpy, https://github.com/travisseymour/EPICpyDevices)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Travis Seymour", email = "nogard@ucsc.edu" }]
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

# uv sync
dependencies = [
    "epiclibcpp>=0.1.0",
#    "loguru>=0.6.0,<0.8",
    "python-dateutil>=2.8.2,<3.0",
#    "ulid>=1.1,<2.0",
    "ulid2>=0.3.0,<1.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.9,<2.0",
    "pingouin>=0.5.2,<1.0",
    "pandas>=2.0,<3.0",
    "polars>=1.32.3,<2.0",
#    "fastnumbers>=5.0.0,<6.0",
#    "platformdirs>=3.0,<4.0",
    "requests>=2.28,<3.0",
    "fastparquet>=2024.11.0",
    "pyarrow>=21.0.0",
#    "rich>=13.4,<14",
    "multimethod>=2.0,<=3.0",
    "pyee>=12,<14",
]

# use
# uv sync --extra dev
[project.optional-dependencies]
dev = [
  "ruff>=0.13.0",
  # "pytest>=7.2.2",
]

[project.urls]
Homepage = "https://github.com/travisseymour/epicpydevicelib"
Issues = "https://github.com/travisseymour/epicpydevicelib/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
ignore = [
    "E402",
    "E731",
    "F811",
]